# dockerfile

./: Dockerfile.mineru  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml  docker-publish.yml
src/: __init__.py
