[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "online-form-restore-prod"
version = "0.1.0"
description = "Production-style MinerU + LangChain agent pipeline for restoring offline form images into OnlineForm designer JSON."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "json-repair>=0.39",
  "Pillow>=10.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pika>=1.3",
  "celery>=5.4",
  "boto3>=1.34",
  "prometheus-client>=0.20",
  "httpx>=0.27",
  "PyMuPDF>=1.24",
  "openpyxl>=3.1",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
